--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1><a href="index.html">M.E.T.A.</a></h1>
     </header>
 
+    <h1 class="got">Mechanical Engineering Inventions</h1>
     <div class="cabinet">
         <div class="card">
             <a class="got" href="crane.html">
@@ -28,6 +29,27 @@
             <a class="got" href="robots.html">
                 <h2 class="cb-title">Robots & Automation</h2>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSf4K8JugJIf1uKQQHO8-R1QT4hqLyrJD5-lA&s" alt="Robots & Automation" class="cb-image" />
+            </a>
+        </div>
+    </div>
+    <h1 class="got">Electrical Engineering Inventions</h1>
+    <div class="cabinet">
+        <div class="card">
+            <a  class="got" href="aeci.html">
+                <h2 class="cb-title">Advanced Electronics and Communication Infrastructure</h2>
+                <img src="https://www.frontiersin.org/files/Articles/889355/fenrg-10-889355-HTML/image_m/fenrg-10-889355-g001.jpg" alt="Advanced Electronics and Communication Infrastructure" class="cb-image" />
+            </a>
+        </div>
+        <div class="card">
+            <a class="got" href="erss.html">
+                <h2 class="cb-title">Electric Railway System</h2>
+                <img src="https://lh5.googleusercontent.com/proxy/h01KDJUZMI7kF61Om5kXToqdIgjpjmZ4x8mBhTao0w6SQJy7sLo7Amb7FQNuwfaGksO8G0BpRjNGHA4C1fzqzCRXWfGQ4q8HsQqyqu-23Tom"  class="cb-image"/>
+            </a>
+        </div>
+        <div class="card">
+            <a class="got" href="hvptd.html">
+                <h2 class="cb-title">High Voltage Power Transmission and Distribution</h2>
+                <img src="https://edisontechcenter.org/transmission/Grid-SideViewCapacitors850.jpg" alt="High Voltage Power Transmission and Distribution" class="cb-image" />
             </a>
         </div>
     </div>
